--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Wed Oct 19 14:57:29 CST 2016
-
 org.gradle.daemon=true
-systemProp.http.proxyHost=7e8dc3c668b9.repository.bugly.qq.com
 org.gradle.jvmargs=-Xmx512m -XX:MaxPermSize=512m
-systemProp.http.proxyPort=80
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=8087
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=8087
